2000-08-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-register.c (gnc_register_check_close): use
	xaccSRCancelCursorTransChanges to cancel any pending changes.

2000-08-21  Dave Peticolas  <dave@krondo.com>

	* src/gnome/reconcile-list.c (gnc_reconcile_list_fill): fix
	a memory leak. xaccTransGetDateStr returns a malloc'd string.

	* src/engine/: Move transaction date routines from date.c to
	Transaction.c. Move definition of Timespec from Transaction.h
	to date.h. Some code cleanup in date.c.

	* src/register/QuickFill.c (qfInsertTextRec): When inserting new
	strings, don't replace older strings that are prefixes of the new
	string.

	* src/engine/gnc-common.h: remove gncBoolean type and constants.
	Replace all uses with glib versions.

2000-08-12  Dave Peticolas  <dave@krondo.com>

	* src/engine/Transaction.c (xaccSplitSetBaseValue): don't adjust
	the price when the base currency is the security of the account.

2000-08-10  Dave Peticolas  <dave@krondo.com>

	* src/register/table-allgui.c (gnc_table_physical_cell_valid): bug
	fix -- get the virtual cell of the target location before getting
	the cellblock.

2000-08-09  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-utils.c: remove unused code

	* src/gnome/dialog-account.c: new file implementing the
	consolidated account add and account edit windows using glade.

2000-08-07  Dave Peticolas  <dave@krondo.com>

	* src/register/*.c: Use glib memory allocation routines.

	* src/register/cellblock.c: fix memory leaks and use glib memory
	allocation routines.

	* src/register/table-allgui.c: reimplement the Table code using
	glib's dynamic arrays. Clean up the code and homogenize the
	function naming convention.

2000-08-04  Dave Peticolas  <dave@krondo.com>

	* src/register/table-gnome.h: remove unused data members

	* src/register/basiccell.h: remove the pixel_width argument
	to the realize callback, it is no longer used.

	* src/register/table-allgui.c: remove the gnc_table_column_width
	call.
